--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
         <div>
             <p>My GitHub Page</p>
 
-            <a href="https://webops.synology.me/Kebab_Shop.ledprj" download
-                >View The KebabShop source file</a
-            >
-            <a href="https://webops.synology.me/Kebab_Shop.rar" download
-                >Download Karbab Shop file</a
-            >
+            <div>
+                <a href="https://webops.synology.me/Kebab_Shop.ledprj" download
+                    >View The KebabShop source file</a
+                >
+            </div>
+            
+            <div>
+                <a href="https://webops.synology.me/Kebab_Shop.rar" download
+                    >Download Karbab Shop file</a
+                >
+            </div>
         </div>
     </body>
 </html>
