--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta content="" name="keywords" />
 
         <!-- Favicons -->
-        <link href="/e1zpwr.github.io/eassets/img/favicon.png" rel="icon" />
-        <link href="/e1zpwr.github.io/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+        <link href="assets/img/favicon.png" rel="icon" />
+        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
         <!-- Google Fonts -->
         <link
@@ -21,26 +21,26 @@
 
         <!-- Vendor CSS Files -->
         <link
-            href="/e1zpwr.github.io/assets/vendor/bootstrap/css/bootstrap.min.css"
+            href="assets/vendor/bootstrap/css/bootstrap.min.css"
             rel="stylesheet"
         />
         <link
-            href="/e1zpwr.github.io/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+            href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
             rel="stylesheet"
         />
-        <link href="/e1zpwr.github.io/assets/vendor/aos/aos.css" rel="stylesheet" />
-        <link href="/e1zpwr.github.io/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+        <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+        <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
         <link
-            href="/e1zpwr.github.io/assets/vendor/swiper/swiper-bundle.min.css"
+            href="assets/vendor/swiper/swiper-bundle.min.css"
             rel="stylesheet"
         />
         <link
-            href="/e1zpwr.github.io/assets/vendor/glightbox/css/glightbox.min.css"
+            href="assets/vendor/glightbox/css/glightbox.min.css"
             rel="stylesheet"
         />
 
         <!-- Template Main CSS File -->
-        <link href="/e1zpwr.github.io/assets/css/style.css" rel="stylesheet" />
+        <link href="assets/css/style.css" rel="stylesheet" />
 
         <!-- =======================================================
   * Template Name: FlexStart - v1.5.0
@@ -57,7 +57,7 @@
                 class=" container-fluid container-xl d-flex align-items-center justify-content-between"
             >
                 <a href="index.html" class="logo d-flex align-items-center">
-                    <img src="/e1zpwr.github.io/assets/img/logo.png" alt="" />
+                    <img src="assets/img/logo.png" alt="" />
                     <span>FlexStart</span>
                 </a>
 
@@ -2314,13 +2314,13 @@
         ></a>
 
         <!-- Vendor JS Files -->
-        <script src="/e1zpwr.github.io/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/aos/aos.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/php-email-form/validate.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/swiper/swiper-bundle.min.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/purecounter/purecounter.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-        <script src="/e1zpwr.github.io/assets/vendor/glightbox/js/glightbox.min.js"></script>
+        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+        <script src="assets/vendor/aos/aos.js"></script>
+        <script src="assets/vendor/php-email-form/validate.js"></script>
+        <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+        <script src="assets/vendor/purecounter/purecounter.js"></script>
+        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+        <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
         <!-- Template Main JS File -->
         <script src="/e1zpwr.github.io/assets/js/main.js"></script>
