--- a/index.html
+++ b/index.html
@@ -2323,6 +2323,6 @@
         <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
         <!-- Template Main JS File -->
-        <script src="/e1zpwr.github.io/assets/js/main.js"></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
