--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <li>
                             <a class="nav-link scrollto" href="#team">Team</a>
                         </li>
-                        <li><a href="/e1zpwr.github.io/blog.html">Blog</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li class="dropdown">
                             <a href="#"
                                 ><span>Drop Down</span>
@@ -170,7 +170,7 @@
                         data-aos-delay="200"
                     >
                         <img
-                            src="/e1zpwr.github.io/assets/img/hero-img.png"
+                            src="assets/img/hero-img.png"
                             class="img-fluid"
                             alt=""
                         />
@@ -222,7 +222,7 @@
                             data-aos-delay="200"
                         >
                             <img
-                                src="/e1zpwr.github.io/assets/img/about.jpg"
+                                src="assets/img/about.jpg"
                                 class="img-fluid"
                                 alt=""
                             />
@@ -248,7 +248,7 @@
                                 data-aos-delay="200"
                             >
                                 <img
-                                    src="/e1zpwr.github.io/assets/img/values-1.png"
+                                    src="assets/img/values-1.png"
                                     class="img-fluid"
                                     alt=""
                                 />
@@ -268,7 +268,7 @@
                                 data-aos-delay="400"
                             >
                                 <img
-                                    src="/e1zpwr.github.io/assets/img/values-2.png"
+                                    src="assets/img/values-2.png"
                                     class="img-fluid"
                                     alt=""
                                 />
@@ -287,7 +287,7 @@
                                 data-aos-delay="600"
                             >
                                 <img
-                                    src="/e1zpwr.github.io/assets/img/values-3.png"
+                                    src="assets/img/values-3.png"
                                     class="img-fluid"
                                     alt=""
                                 />
